# pils

./: .gitignore  CMakeLists (kopi).txt  CMakeLists.txt
.svn/: wc.db
backup/: jpils-autodeclare.h  jpils-autodefine.h  jpils-autoplumming.h
doc/openoffice/danish/: PILS sproget.odt
doc/openoffice/english/: The PILS language.odt
extra/danish/diabetessimulator/data/bruger/: Bert Braunschweiger.pils
extra/danish/diabetessimulator/data/mad/: generelt.xml  skagen_fiskerestaurant.xml
extra/danish/diabetessimulator/pils/: diabetessimulator.pils  glukosemodel.pils
pils/danish/: billedbog.pils  galleri.pils  minutmodel.pils
pils/danish/system/: danish.pils  new.pils
pils/english/parse/: csharp.pils  html.pils  matlab.pils  vhdl.pils
pils/english/plug/: odbc.pils  sqlite.pils
pils/english/system/: bugpinner.pils  config.pils  editor.pils  editor_stuff.pils  english.pils  icons.pils  new.pils  registry.pils  system.pils  test.pils
pils/english/system/generator/: generator.pils  what-to-do.txt
pils/english/system/juce/: juce.pils  plumming-generator.pils
pils/english/system/qt/: qt.pils
readme/danish/: license.txt
readme/english/: support.txt
src/: main.cpp
src/jpils/: app.rc  jpils-autodeclare.h  jpils-autodefine.cpp  jpils-autodefine.h  jpils-autoplumming.cpp  jpils-autoplumming.h  jpils-binding-base.cpp  jpils-binding-base.h  jpils-commander.cpp  jpils-commander.h  jpils-file.cpp  jpils-file.h  jpils-graph-define.h  jpils-graph.cpp  jpils-graph.h  jpils-heap.cpp  jpils-opengl.cpp  jpils-opengl.h  jpils-plughost.cpp  jpils-plughost.h  jpils-plumming.cpp  jpils-plumming.h  jpils-standard-specials.cpp  jpils-standard-specials.h  jpils-supplement.cpp  jpils-supplement.h  jpils-thread.cpp  jpils-thread.h  jpils.cpp  juce_PDFWriter.cpp  juce_PDFWriter.h  pils_configuration_get_user_language.cpp
src/nppils/: PilsBrowserPlugin.cpp  include_ActiveX_GlueCode.cpp  nppils-define.cpp  pils_boot_expression.cpp
src/odbc-plug/: odbc-plug.cpp  odbc-plug.h  odbc-plugface.h
src/pils-kernel/: CMakeLists.txt  StringCasing.cpp  builder.cpp  builder.h  builtin.cpp  builtin.h  call.cpp  call.h  catchy.cpp  catchy.h  channel.cpp  channel.h  compile.cpp  compile.h  concatenate.cpp  datamodel.cpp  datamodel.h  escape.cpp  escape.h  initializers.h  language.cpp  language.h  node.cpp  node.h  numeric.cpp  numeric.h  pilsatomic.cpp  pilsatomic.h  pilserror.cpp  pilserror.h  pilsmutex.h  pilsread.cpp  pilsread.h  pilsstring.cpp  pilsstring.h  pilsthread.cpp  pilsthread.h  pipe.cpp  pipe.h  quickstep.cpp  (+16 more)
src/pils_app/: CMakeLists.txt  main.cpp
src/pils_kernel/: CMakeLists.txt  auto_language_switch.h  builder.cpp  builder.h  builtin.cpp  builtin.h  call.cpp  call.h  catchy.cpp  catchy.h  channel.cpp  channel.h  compile.cpp  compile.h  concatenate.cpp  concatenate.h  datamodel.cpp  datamodel.h  escape.cpp  initializers.h  language.cpp  language.h  node.cpp  numeric.cpp  numeric.h  order.cpp  order.h  pilsatomic.cpp  pilsatomic.h  pilserror.cpp  pilsmutex.h  pilsread.cpp  pilsread.h  pilsstring.cpp  pilsstring.h  pilsthread.cpp  pilsthread.h  pipe.cpp  pipe.h  quickstep.cpp  (+15 more)
src/pils_qtbinding/: CMakeLists.txt  pils_boot_expression.cpp  pils_configuration_get_user_language.cpp  qpils_clang.cpp  qpils_clang.h  qpils_commander.cpp  qpils_commander.h  qpils_converter.cpp  qpils_converter.h  qpils_event.cpp  qpils_event.h  qpils_file.cpp  qpils_file.h  qpils_plumming.cpp  qpils_plumming.h  qpils_qobject_wrapper.cpp  qpils_qobject_wrapper.h  qpils_registry.cpp  qpils_signal.cpp  qpils_signal.h  qpils_specialized_node.cpp  qpils_specialized_node.h  qpils_standard_specials.cpp  qpils_standard_specials.h  qpils_supplement.cpp  qpils_supplement.h  qpils_thread.cpp  qpils_thread.h  registry.h
src/pilsplug/: CMakeLists.txt  compile.h  initializers.h  pilsplug.h  plughost.h
src/qpils/: pils_boot_expression.cpp  qpils-binding-base.cpp.txt  qpils-binding-base.h.txt  qpils-commander.cpp  qpils-commander.h  qpils-file.cpp  qpils-file.h  qpils-heap.cpp  qpils-plumming.cpp  qpils-plumming.h  qpils-standard-specials.cpp  qpils-standard-specials.h  qpils-thread.cpp  qpils-thread.h
src/scripts/pils/: caseconverter.pils  language-switch.pils  syntax-error-messages.pils
src/sqlite-plug/: readme.txt  sqlite-plug.cpp  sqlite-plug.h  sqlite-plugface.h
